--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -13,7 +13,7 @@ figcaption,.com { color: #93a1a1; }
 .typ, .atn, .dec, .var { color: teal; }
 .pln { color: #48484c; }
 .calendar{
-  height: 100%;
+  height: 80vh;
   width: 80%;
 }
 #registrar{
