--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -89,8 +89,9 @@ section h3.title {
 }
 
 section p {
-	max-width: 775px;
+	max-width: 2000px;
 	line-height: 2;
+  font-size: 22px;
 	padding: 0 20px;
 	margin-bottom: 30px;
 	text-align: center;
@@ -340,11 +341,13 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
-body {
+.body {
   margin: 0;
+  background: url("https://images.unsplash.com/photo-1516574187841-cb9cc2ca948b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
+  /* background: url("https://images.unsplash.com/photo-1505751172876-fa1923c5c528?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTB8fGhvc3BpdGFsfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"); */
   /* background: url("https://images.unsplash.com/photo-1583830379747-195159d0de82?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nzh8fGhvc3BpdGFsfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"); */
   background-size: cover;
-  background-color: #1e347b;
+  /* background-color: #1e347b; */
   position: relative;
   background-position: center;
   width: 100%;
